SAVE SYSTEM completo
Toda o sistema do salvamento de game está funcionando, criando arquivo, carregando e etc.
**mais pequenas alterações

--- a/Game_V.0.1.csproj
+++ b/Game_V.0.1.csproj
@@ -7,8 +7,7 @@
     <EnableDefaultCompileItems>true</EnableDefaultCompileItems>
   </PropertyGroup>
   <PropertyGroup>
-    <LangVersion>
-    </LangVersion>
+    <LangVersion>latestMajor</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Nullable>disable</Nullable>
