--- a/Game_V.0.1.csproj
+++ b/Game_V.0.1.csproj
@@ -18,4 +18,7 @@
   <PropertyGroup>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Framework.Android" Version="3.8.1.303" />
+  </ItemGroup>
 </Project>
